# Goat-hash

./: Cargo.toml  README.md
scripts/: ntt.sage  param.sage
src/: bench.rs  lib.rs  param.rs  ring.rs
