[package]
name = "goat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = "0.4.0"
goldilocks = { git = "https://github.com/zhenfeizhang/Goldilocks" }
ff = "0.13"
poseidon = { git = "https://github.com/zhenfeizhang/poseidon" }